@@ -20,6 +20,7 @@ Ver.8 (in development)
 - Custom url for after clicking logout button of the page navigation can set to INTERMediatorOnPage.logoutURL.
 - Support handling Claris FileMaker's checkbox set feature on Post Only mode when using DB_FileMaker_DataAPI class or DB_FileMaker_FX class (Thanks to Mr. Masakatsu Inamoto).
 - Update sample schema files and recipe.rb for the INTER-Mediator-Server virtual machine and CI.
+- The 'import' key for CSV file importing can set on each context of definition file.
 - [BUG FIX] Fix compatibility with Claris FileMaker Server. The affected version is Ver.7.
 - [BUG FIX] IMLibPageNavigation.moveDetailOnceAgain() didn't work fine.
 - [BUG FIX] On the navi-control key, confirm-delete works but delete-confirm didn't (also insert).
